--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -12,5 +12,17 @@
   },
   "tooltipBookmarked": {
     "message": "Click to remove bookmark current page"
+  },
+  "tooltipSettingIcon": {
+    "message": "Jump to settings page"
+  },
+  "deleteBookmark": {
+    "message": "Delete this page's bookmark"
+  },
+  "addBookmark": {
+    "message": "Bookmark this page"
+  },
+  "search": {
+    "message": "Search with Bookmark Intelligence"
   }
 }
