--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -1,3 +1,17 @@
 {
-  "appName": "Bookmark Intelligence"
+  "appName": "Bookmark Intelligence",
+  "settings": "Settings",
+  "sideNav": {
+    "allBookmarks": "All Bookmarks",
+    "folders": "Folders",
+    "filters": {
+      "sectionTitle": "Filters",
+      "favorites": "Favorites",
+      "withoutTags": "Without Tags"
+    },
+    "tags": {
+      "sectionTitle": "Tags"
+    }
+
+  }
 }
