fix search text and tag issue

--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -19,6 +19,7 @@
   "search": {
     "title": "Search",
     "searchBtn": "Search",
+    "placeholder": "Type search text. E.g: bitsky",
     "advancedSearch": "Switch to advanced",
     "basicSearch": "Switch to basic"
   }
