--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -1,14 +1,50 @@
 {
   "extensionName": {
-    "message": "Bookmark Intelligence",
+    "message": "BitSky",
     "description": "name of the extension"
   },
   "extensionDescription": {
     "message": "test",
     "description": ""
   },
-  "tooltipBookmark": {
-    "message": "Click to bookmark current page"
+  "slogon": {
+    "message": "Make Life Productive"
+  },
+  "settingsTitle": {
+    "message": "Settings"
+  },
+  "settingsTooltip": {
+    "message": "Click to open settings page"
+  },
+  "questionTooltip": {
+    "message": "Click to open documents"
+  },
+  "searchTitle": {
+    "message": "Open Search Page"
+  },
+  "searchDescription": {
+    "message": "Search bookmarks or pages by title, url, tags, content"
+  },
+  "searchTooltip": {
+    "message": "Click to jump to search"
+  },
+  "savePageTitle": {
+    "message": "Save Page"
+  },
+  "savePageDescription": {
+    "message": "Save current page without add a browser bookmark"
+  },
+  "savePageTooltip": {
+    "message": "Click to save current page"
+  },
+  "bookmarkPageTitle": {
+    "message": "Bookmark Page"
+  },
+  "bookmarkPageDescription": {
+    "message": "Bookmark current page will save page also add a browser bookmark"
+  },
+  "bookmarkPageTooltip": {
+    "message": "Click to save current page"
   },
   "tooltipBookmarked": {
     "message": "Click to remove bookmark current page"
