add a bacis page of extension settings'

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -8,7 +8,7 @@
     "description": ""
   },
   "slogon": {
-    "message": "Make Life Productive"
+    "message": "- Make Life Productive"
   },
   "settingsTitle": {
     "message": "Settings"
