implement only display extension settings in options page

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -60,5 +60,8 @@
   },
   "search": {
     "message": "Search with Bookmark Intelligence"
+  },
+  "errorPageTitle": {
+    "message": "Error"
   }
 }
