add a basic structure of extension settings page

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -13,6 +13,12 @@
   "settingsTitle": {
     "message": "Settings"
   },
+  "importTitle": {
+    "message": "Import"
+  },
+  "extensionSettingsTitle": {
+    "message": "Extension Settings"
+  },
   "settingsTooltip": {
     "message": "Click to open settings page"
   },
