--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -1,6 +1,7 @@
 {
   "appName": "Bookmark Intelligence",
   "settings": "Settings",
+  "extensionSettings": "Extension Settings",
   "sideNav": {
     "allBookmarks": "All Bookmarks",
     "folders": "Folders",
