--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -1,6 +1,6 @@
 {
   "appName": "Bookmark Intelligence",
-  "settings": "Settings",
+  "settings": "Preferences",
   "extensionSettings": "Extension Settings",
   "sideNav": {
     "allBookmarks": "All Bookmarks",
