update import ui

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -81,5 +81,17 @@
   },
   "errorPageTitle": {
     "message": "Error"
+  },
+  "totalTitle": {
+    "message": "Total"
+  },
+  "successTitle": {
+    "message": "Success"
+  },
+  "failedTitle": {
+    "message": "Fail"
+  },
+  "pendingTitle": {
+    "message": "In Progress"
   }
 }
