--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -22,6 +22,9 @@
   "importButton": {
     "message": "Start Import"
   },
+  "stopImportButton": {
+    "message": "Stop Import"
+  },
   "generalTitle": {
     "message": "General"
   },
