fix pagedata not saved

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -88,6 +88,9 @@
   "totalTitle": {
     "message": "Total"
   },
+  "remainingTitle": {
+    "message": "Remaining"
+  },
   "successTitle": {
     "message": "Success"
   },
