extract page data in API

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -25,6 +25,9 @@
   "stopImportButton": {
     "message": "Stop Import"
   },
+  "cleanAndImportButton": {
+    "message": "Clean and Import"
+  },
   "generalTitle": {
     "message": "General"
   },
