fix issue that import history doesn't work

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -31,8 +31,8 @@
   "stopImportButton": {
     "message": "Stop Import"
   },
-  "cleanAndImportButton": {
-    "message": "Clean and Import"
+  "cleanButton": {
+    "message": "Clean"
   },
   "generalTitle": {
     "message": "General"
