implement notification when save content to backend

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -129,5 +129,11 @@
   },
   "createdAtTitle": {
     "message": "Created At"
+  },
+  "saved": {
+    "message": "Saved"
+  },
+  "failed": {
+    "message": "Failed, will auto retry in background"
   }
 }
