display viewed at and add console log

--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -23,5 +23,6 @@
     "placeholder": "E.g: 'Elon Mush, Twitter' means search Elon Mush or Twitter. 'Elon Mush + Twitter' means search Elon Mush and Twitter. '",
     "advancedSearch": "Switch to advanced",
     "basicSearch": "Switch to basic"
-  }
+  },
+  "viewedAt": "Viewed At"
 }
