--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -137,7 +137,7 @@
     "message": "Failed, will auto retry in background"
   },
   "serviceNotHealthTitle": {
-    "message": "Attempting to connect to BitSky Desktop Application"
+    "message": "Unable to connect to the Bitsky desktop application"
   },
   "serviceNotHealthDetail": {
     "message": "Please ensure that the BitSky desktop application is currently running. If the application is running, please allow a few moments for the connection to establish. If you still encounter this message after a brief wait, kindly consider restarting the BitSky desktop application"
