--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -129,5 +129,17 @@
   },
   "createdAtTitle": {
     "message": "Created At"
+  },
+  "saved": {
+    "message": "Saved"
+  },
+  "failed": {
+    "message": "Failed, will auto retry in background"
+  },
+  "serviceNotHealthTitle": {
+    "message": "Unable to connect to the Bitsky desktop application"
+  },
+  "serviceNotHealthDetail": {
+    "message": "Please ensure that the BitSky desktop application is currently running. If the application is running, please allow a few moments for the connection to establish. If you still encounter this message after a brief wait, kindly consider restarting the BitSky desktop application"
   }
 }
