implement search page based on react-instantsearch

--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -21,8 +21,10 @@
     "title": "Search",
     "searchBtn": "Search",
     "placeholder": "Search something...",
-    "advancedSearch": "Switch to advanced",
-    "basicSearch": "Switch to basic"
+    "moreOptions": "More options",
+    "lessOptions": "Less options",
+    "basicSearch": "Switch to basic",
+    "sortBy": "Sort by"
   },
   "viewedAt": "Viewed At"
 }
