--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -1,5 +1,5 @@
 {
-  "appName": "Bookmark Intelligence",
+  "appName": "BitSky",
   "settings": "Preferences",
   "extensionSettings": "Extension Settings",
   "sideNav": {
