update hit result

--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -25,6 +25,8 @@
     "lessOptions": "Less options",
     "basicSearch": "Switch to basic",
     "sortBy": "Sort by",
+    "url": "URL",
+    "searchUrl": "Search URL",
     "tag": "Tag",
     "searchTag": "Search tag",
     "bookmark": "Bookmark",
