search support hostname

--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -27,6 +27,8 @@
     "sortBy": "Sort by",
     "url": "URL",
     "searchUrl": "Search URL",
+    "hostName": "Host Name",
+    "searchHostName": "Search host name",
     "tag": "Tag",
     "searchTag": "Search tag",
     "bookmark": "Bookmark",
