--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -1,5 +1,5 @@
 {
-  "appName": "Bookmark Intelligence",
+  "appName": "BitSky",
   "settings": "Preferences",
   "extensionSettings": "Extension Settings",
   "sideNav": {
@@ -21,8 +21,29 @@
     "title": "Search",
     "searchBtn": "Search",
     "placeholder": "Search something...",
-    "advancedSearch": "Switch to advanced",
-    "basicSearch": "Switch to basic"
+    "moreOptions": "More options",
+    "lessOptions": "Less options",
+    "basicSearch": "Switch to basic",
+    "sortBy": "Sort by",
+    "url": "URL",
+    "searchUrl": "Search URL",
+    "hostName": "Host Name",
+    "searchHostName": "Search host name",
+    "tag": "Tag",
+    "searchTag": "Search tag",
+    "bookmark": "Bookmark",
+    "bookmarked": "Bookmarked",
+    "unbookmark": "Unbookmark",
+    "favorite": "Favorite",
+    "favorited": "Favorited",
+    "resultsPerPage": "{{resultsNumber}} results per page",
+    "lastVisited": "Last visited",
+    "mostVisited": "Most visited",
+    "resetButtonText": "Reset",
+    "newTag": "New Tag"
   },
-  "viewedAt": "Viewed At"
+  "viewedAt": "Viewed At",
+  "yes": "Yes",
+  "no": "No",
+  "delete": "Delete"
 }
