implement delete ignore url

--- a/projects/ui/src/i18n/en/common.json
+++ b/projects/ui/src/i18n/en/common.json
@@ -1,6 +1,10 @@
 {
   "appName": "BitSky",
-  "settings": "Preferences",
+  "settings": {
+    "title": "Preferences",
+    "general": "General",
+    "ignoreURLs": "Ignore URLs"
+  },
   "extensionSettings": "Extension Settings",
   "sideNav": {
     "allBookmarks": "All Bookmarks",
