--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -32,7 +32,7 @@
     "message": "Import browser history to BitSky. Import will not delete your browser history, if a history need to login  or connect VPN, it maybe failed to import."
   },
   "importHistoryDetail": {
-    "message": "Import passed 300 days browser history, and max import 10000 records"
+    "message": "Import passed $1 days browser history, and max import $2 records"
   },
   "importButton": {
     "message": "Start Import"
