add browser-extension locales

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -19,6 +19,7 @@
   },
   "action": { "message": "Action" },
   "sureToDelete": { "message": "Are you sure to delete?" },
+  "delete": { "message": "Delete" },
   "importTitle": {
     "message": "Import Bookmarks"
   },
