update UI with LoseConnection

--- a/projects/browser-extension/locales/en/messages.json
+++ b/projects/browser-extension/locales/en/messages.json
@@ -99,7 +99,7 @@
     "message": "Bookmark this page"
   },
   "search": {
-    "message": "Search with Bookmark Intelligence"
+    "message": "Search with SeekBot"
   },
   "errorPageTitle": {
     "message": "Error"
